--- a/css/Warsztaty1.css
+++ b/css/Warsztaty1.css
@@ -127,8 +127,55 @@ a:first-child {
 
 /* SECTION 1 */
 
+.section1 > .container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .section1 {
-    background: rgb(194,194,194);
-    background: linear-gradient(0deg, rgba(194,194,194,1) 0%, rgba(224,224,224,1) 46%, rgba(255,255,255,1) 100%);
-    height: 400px;
+    background: rgb(194, 194, 194);
+    background: linear-gradient(0deg, rgba(194, 194, 194, 1) 0%, rgba(224, 224, 224, 1) 46%, rgba(255, 255, 255, 1) 100%);
+    height: 480px;
+}
+
+.section1__text {
+    width: 49%;
+    position: relative;
+}
+
+.section1__title {
+    position: absolute;
+    font-size: 40px;
+    top: -150px;
+}
+
+.section1__text p {
+    position: absolute;
+    text-align: center;
+    top: -100px;
+    left: -90px;
+    padding: 40px 60px;
+}
+
+.section1__button {
+    position: absolute;
+    top: 70px;
+    left: 18%;
+    background-color: #00cca3;
+    color: white;
+    width: 200px;
+    height: 50px;
+    font-size: 20px;
+    border-radius: 10%;
+    border: none;
+}
+
+.blackchair {
+    width: 49%;
+}
+
+.arrow {
+    font-size: 100px;
+    color: #00cca3;
+    font-weight: 100;
 }
